[package]
name = "asknothingx2-util"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "asknothing"
documentation = "https://docs.rs/asknothingx2-util"
repository = "https://github.com/m3idnotfree/asknothingx2-util"
license = "MIT OR Apache-2.0"
keywords = ["asknothing", "client", "http", "oauth2", "web"]
categories = [
  "api-bindings",
  "authentication",
  "network-programming",
  "web-programming"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "oneshot"
path = "examples/oneshot.rs"
required-features = ["oauth-server"]

[[test]]
name = "signed_token"
path = "tests/signed_token.rs"
required-features = ["oauth"]

[[test]]
name = "oneshot"
path = "tests/oneshot.rs"
required-features = ["oauth-server"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
bytes = { version = "1.11.0", optional = true }
chrono = { version = "0.4.43", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
http = { version = "1.4.0", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.8.1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1.20", features = ["tokio"], optional = true }
percent-encoding = "2.3.2"
rand = { version = "0.9.2", optional = true }
reqwest = { version = "0.13.1", features = [
  "brotli",
  "cookies",
  "gzip",
  "hickory-dns",
  "json",
  "multipart",
  "stream"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
subtle = { version = "2.6.1", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", optional = true }
tracing = { version = "0.1.44", optional = true }
url = { version = "2.5.8", optional = true }
zeroize = { version = "1.8.2", features = ["derive"], optional = true }

[dev-dependencies]
futures = "0.3.31"
proptest = "1.9.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
wiremock = "0.6.5"

[features]
api = [
  "base64",
  "bytes",
  "dep:reqwest",
  "dep:tokio",
  "http",
  "serde_json",
  "serde_urlencoded",
  "tokio?/fs",
  "tokio?/process",
  "tokio?/sync",
  "tracing",
  "url"
]
full = ["api", "oauth"]
oauth = [
  "base64",
  "chrono",
  "hex",
  "hmac",
  "rand",
  "sha2",
  "subtle",
  "url",
  "zeroize"
]
oauth-server = [
  "dep:tokio",
  "http-body-util",
  "hyper",
  "hyper-util",
  "serde_json",
  "serde_urlencoded",
  "tokio?/macros",
  "tokio?/net",
  "tokio?/signal",
  "tokio?/sync",
  "tokio?/time",
  "tracing"
]
reqwest = ["dep:reqwest"]
serde = ["serde_json"]
